--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-
 	<div class="blok _container">
 		<header class="header">
-			<div class="header__container _container">
+			<div class="header__container">
 				<div class="header__logo">
 					<div class="logo">
 						<a href="#">
@@ -46,7 +45,7 @@
 	</div>
 	<!-- blok -->
 	<!-- content -->
-
+	пьальполдатпоатпалппадппдаладпапдп
 	<!-- content -->
 	<footer class="footer-top">
 		<div class="footer__body _container">
