--- a/index.html
+++ b/index.html
@@ -10,42 +10,122 @@
 </head>
 
 <body>
-	<div class="blok _container">
-		<header class="header">
-			<div class="header__container">
-				<div class="header__logo">
-					<div class="logo">
-						<a href="#">
-							<img class="logo__img" src="img/Group 51.svg" alt=""></a>
+	<div class="block">
+		<div class="_container">
+			<header class="header">
+				<div class="header__container">
+					<div class="header__logo">
+						<div class="logo">
+							<a href="#">
+								<img class="logo__img" src="img/Group 51.svg" alt=""></a>
+						</div>
+					</div>
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li><a class="menu__item" href="#">HOW IT WORKS</a></li>
+							<li><a class="menu__item" href="#">SUBJECT</a></li>
+							<li><a class="menu__item" href="#">PRICES</a></li>
+							<li><a class="menu__item" href="#">CONTACT US</a></li>
+							<li><a class="menu__item" href="#">INFORMATION</a></li>
+						</ul>
+					</nav>
+					<div class="contact">
+						<div class="contact__text">HELPDESK</div>
+						<div class="contact__block">
+							<img class="contact__img" src="img/call.svg">
+							<div class="contact__namber">+11 (0) 231 678 0000</div>
+						</div>
 					</div>
 				</div>
-				<nav class="menu__body">
-					<ul class="menu__list">
-						<li><a class="menu__item" href="#">HOW IT WORKS</a></li>
-						<li><a class="menu__item" href="#">SUBJECT</a></li>
-						<li><a class="menu__item" href="#">PRICES</a></li>
-						<li><a class="menu__item" href="#">CONTACT US</a></li>
-						<li><a class="menu__item" href="#">INFORMATION</a></li>
-					</ul>
-				</nav>
-				<div class="contact">
-					<div class="contact__text">HELPDESK</div>
-					<div class="contact__block">
-						<img class="contact__img" src="img/call.svg">
-						<div class="contact__namber">+11 (0) 231 678 0000</div>
-					</div>
-				</div>
+			</header>
+			<div class="block__slogan">
+				<h1 class="block__title">Guided <span>online tutoring</span> through online chat and email</h1>
+				<a href="#" class="block__link"><span>HIRE A TUTOR</span></a>
 			</div>
-		</header>
-
-		<div class="block__slogan">
-			<h1 class="block__title">Guided <span>online tutoring</span> through online chat and email</h1>
-			<a href="#" class="block__link"><span>HIRE A TUTOR</span></a>
 		</div>
 	</div>
 	<!-- blok -->
 	<!-- content -->
-	пьальполдатпоатпалппадппдаладпапдп
+	<div class="block-achiev _container">
+		<div class="achiev">
+			<div class="achiev__img"><img src="img/verified.svg" alt=""></div>
+			<div class="achiev__text">Over <span>500</span>
+				Subjects available.
+				A tutor for every need.</div>
+		</div>
+		<div class="achiev">
+			<div class="achiev__img"><img src="img/rating.svg" alt=""></div>
+			<div class="achiev__text">Over <span>1.5</span> million
+				top ratings and
+				reviews</div>
+		</div>
+	</div>
+	<div class="main _container">
+		<div class="main__header">HOW IT WORKS</div>
+		<div class="main__body">
+			<div class="main__block">
+				<div class="main__img">
+					<img src="img/referral-step-02-45a75b91858a8c0d6c9f21c491ed6537153fab99bb8764e428486b38745eda7c.svg"
+						alt="">
+				</div>
+				<div class="main__text">
+					<div class="main__title">First: <span>Contact Us</span></div>
+					<div class="main__subtitle">Contact us via Email or Phone with your
+						Tutoring needs and we match the most
+						suitably qualifed tutors for a Free 30
+						Mins demo...</div>
+				</div>
+			</div>
+			<div class="main__block">
+				<div class="main__text">
+					<div class="main__title">Book <span>your Demo</span></div>
+					<div class="main__subtitle">Contact us via Email or Phone with your
+						Tutoring needs and we match the most
+						suitably qualifed tutors for a Free 30
+						Mins demo...</div>
+				</div>
+				<div class="main__img">
+					<img src="img/OBJECTS.svg" alt="">
+				</div>
+			</div>
+			<div class="main__block">
+				<div class="main__img">
+					<img src="img/чел с книгами.svg" alt="">
+				</div>
+				<div class="main__text">
+					<div class="main__title">Hire <span>a Tutor</span></div>
+					<div class="main__subtitle">If you happy to go ahead with the
+						your selected tutor, we will make the
+						booking for you at a mutually
+						convenient time..</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="block2">
+		<div class="block-content _container">
+			<div class="wraper_block-content__video">
+				<div class="block-content__video"><img src="/video/2GU.gif" alt="">
+				</div>
+			</div>
+		</div>
+		<div class="block-content__link _container">
+			<ul class="block-content__list">
+				<li><a href="#">MATHS</a></li>
+				<li><a href="#">CHEMISTRY</a></li>
+				<li><a href="#">BIOLOGY</a></li>
+				<li><a href="#">PHYSICS</a></li>
+				<li><a href="#">COMPUTER SCIENCE</a></li>
+				<li><a href="#">ENGLISH LITERATURE</a></li>
+				<li><a href="#">FRENCH</a></li>
+				<li><a href="#">ACCOUNTING</a></li>
+				<li><a href="#">OTHER SUBJECTS</a></li>
+			</ul>
+		</div>
+	</div>
+
+
 	<!-- content -->
 	<footer class="footer-top">
 		<div class="footer__body _container">
@@ -85,6 +165,20 @@
 			</div>
 		</div>
 	</footer>
+	<footer class="footer-bot">
+		<div class="footer-bot__body _container">
+			<div class="footer-bot__link">
+				<a href="#">Sitemap</a>
+				<a href="#">Privacy Policy</a>
+				<a href="#">Trust & Security</a>
+			</div>
+			<div class="Copyright">Copyright © 2018, <a class="Copyright" href="#">Tutor Site</a>
+			</div>
+		</div>
+
+	</footer>
+
+
 </body>
 
 </html>
