--- a/index.html
+++ b/index.html
@@ -1,184 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@400;500;600;700&display=swap">
-	<link rel="stylesheet" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>sarajevo</title>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/css/style.css">
+	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
 </head>
 
 <body>
-	<div class="block">
-		<div class="_container">
+	<div class="block-1">
+		<div class="container">
 			<header class="header">
-				<div class="header__container">
+				<div class="header__content">
 					<div class="header__logo">
-						<div class="logo">
-							<a href="#">
-								<img class="logo__img" src="img/Group 51.svg" alt=""></a>
-						</div>
+						<div class="header__logo-title">sarajevo<span>.</span></div>
+						<div class="header__logo-subtitle">I’am your tag line</div>
 					</div>
-					<nav class="menu__body">
-						<ul class="menu__list">
-							<li><a class="menu__item" href="#">HOW IT WORKS</a></li>
-							<li><a class="menu__item" href="#">SUBJECT</a></li>
-							<li><a class="menu__item" href="#">PRICES</a></li>
-							<li><a class="menu__item" href="#">CONTACT US</a></li>
-							<li><a class="menu__item" href="#">INFORMATION</a></li>
+					<nav class="header__nav">
+						<ul>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Features</a></li>
+							<li><a href="#">Works</a></li>
+							<li><a href="#">Team</a></li>
+							<li><a href="#">Contact</a></li>
 						</ul>
 					</nav>
-					<div class="contact">
-						<div class="contact__text">HELPDESK</div>
-						<div class="contact__block">
-							<img class="contact__img" src="img/call.svg">
-							<div class="contact__namber">+11 (0) 231 678 0000</div>
-						</div>
-					</div>
 				</div>
 			</header>
-			<div class="block__slogan">
-				<h1 class="block__title">Guided <span>online tutoring</span> through online chat and email</h1>
-				<a href="#" class="block__link"><span>HIRE A TUTOR</span></a>
-			</div>
-		</div>
-	</div>
-	<!-- blok -->
-	<!-- content -->
-	<div class="block-achiev _container">
-		<div class="achiev">
-			<div class="achiev__img"><img src="img/verified.svg" alt=""></div>
-			<div class="achiev__text">Over <span>500</span>
-				Subjects available.
-				A tutor for every need.</div>
-		</div>
-		<div class="achiev">
-			<div class="achiev__img"><img src="img/rating.svg" alt=""></div>
-			<div class="achiev__text">Over <span>1.5</span> million
-				top ratings and
-				reviews</div>
-		</div>
-	</div>
-	<div class="main _container">
-		<div class="main__header">HOW IT WORKS</div>
-		<div class="main__body">
-			<div class="main__block">
-				<div class="main__img">
-					<img src="img/referral-step-02-45a75b91858a8c0d6c9f21c491ed6537153fab99bb8764e428486b38745eda7c.svg"
-						alt="">
+			<div class="block-1__content">
+				<div class="block-1__title">
+					<h1>sarajevo.</h1>
 				</div>
-				<div class="main__text">
-					<div class="main__title">First: <span>Contact Us</span></div>
-					<div class="main__subtitle">Contact us via Email or Phone with your
-						Tutoring needs and we match the most
-						suitably qualifed tutors for a Free 30
-						Mins demo...</div>
+				<div class="block-1__subtitle"><span>/creative</span> one page template.</div>
+				<div class="block-1__text">
+					<p>We are a team of professionals</p>
 				</div>
-			</div>
-			<div class="main__block">
-				<div class="main__text">
-					<div class="main__title">Book <span>your Demo</span></div>
-					<div class="main__subtitle">Contact us via Email or Phone with your
-						Tutoring needs and we match the most
-						suitably qualifed tutors for a Free 30
-						Mins demo...</div>
-				</div>
-				<div class="main__img">
-					<img src="img/OBJECTS.svg" alt="">
-				</div>
-			</div>
-			<div class="main__block">
-				<div class="main__img">
-					<img src="img/чел с книгами.svg" alt="">
-				</div>
-				<div class="main__text">
-					<div class="main__title">Hire <span>a Tutor</span></div>
-					<div class="main__subtitle">If you happy to go ahead with the
-						your selected tutor, we will make the
-						booking for you at a mutually
-						convenient time..</div>
+				<div class="block-1__social">
+					<div class="block-1__icon"><img src="/img/twitter.svg" alt=""></div>
+					<div class="block-1__icon"><img src="/img/facebook.svg" alt=""></div>
+					<div class="block-1__icon"><img src="/img/google+.svg" alt=""></div>
+					<div class="block-1__icon"><img src="/img/dribbble.svg" alt=""></div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div class="block2">
-		<div class="block-content _container">
-			<div class="wraper_block-content__video">
-				<div class="block-content__video"><img src="/video/2GU.gif" alt="">
-				</div>
-			</div>
-		</div>
-		<div class="block-content__link _container">
-			<ul class="block-content__list">
-				<li><a href="#">MATHS</a></li>
-				<li><a href="#">CHEMISTRY</a></li>
-				<li><a href="#">BIOLOGY</a></li>
-				<li><a href="#">PHYSICS</a></li>
-				<li><a href="#">COMPUTER SCIENCE</a></li>
-				<li><a href="#">ENGLISH LITERATURE</a></li>
-				<li><a href="#">FRENCH</a></li>
-				<li><a href="#">ACCOUNTING</a></li>
-				<li><a href="#">OTHER SUBJECTS</a></li>
-			</ul>
-		</div>
-	</div>
-
-
-	<!-- content -->
-	<footer class="footer-top">
-		<div class="footer__body _container">
-			<div class="footer__nav">
-				<ul class="footer__nav-list">
-					<li><a class="footer__nav-item" href="#">Information</a></li>
-					<li><a class="footer__nav-item" href="#">About Us</a></li>
-					<li><a class="footer__nav-item" href="#">Become a Tutor</a></li>
-					<li><a class="footer__nav-item" href="#">Testimonial &</a></li>
-					<li><a class="footer__nav-item" href="#">Reviews</a></li>
-					<li><a class="footer__nav-item" href="#">Home education</a></li>
-					<li><a class="footer__nav-item" href="#">Adult Learning</a></li>
-					<li><a class="footer__nav-item" href="#">Expat students</a></li>
-					<li><a class="footer__nav-item" href="#">Helpful Links</a></li>
-					<li><a class="footer__nav-item" href="#">Schools</a></li>
-					<li><a class="footer__nav-item" href="#">Staying safe online</a></li>
-					<li><a class="footer__nav-item" href="#">Schools</a></li>
-				</ul>
-			</div>
-			<div class="footer__info">
-				<div class="wraper_logo">
-					<div class="logo">
-						<a href="#"><img class="logo__img" src="img/Group 51.svg" alt=""></a>
-					</div>
-				</div>
-				<div class="asid">
-					<div class="asid__text">Contact Us</div>
-					<div class="asid__nomber">+11 (0) 231 678 0000</div>
-					<div class="mail">support@tutorsite.com</div>
-				</div>
-				<div class="socials">
-					<div class="socials__img"><a href="#"><img src="img/facebook (1).svg" alt=""></a></div>
-					<div class="socials__img"><a href="#"><img src="img/twitter (1).svg" alt=""></a></div>
-					<div class="socials__img"><a href="#"><img src="img/search (2).svg" alt=""></a></div>
-					<div class="socials__img"><a href="#"><img src="img/youtube (1).svg" alt=""></a></div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<footer class="footer-bot">
-		<div class="footer-bot__body _container">
-			<div class="footer-bot__link">
-				<a href="#">Sitemap</a>
-				<a href="#">Privacy Policy</a>
-				<a href="#">Trust & Security</a>
-			</div>
-			<div class="Copyright">Copyright © 2018, <a class="Copyright" href="#">Tutor Site</a>
-			</div>
-		</div>
-
-	</footer>
-
-
+	<script src="/js/icon.js"></script>
+	<!-- ===================================== -->
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+		crossorigin="anonymous"></script> -->
 </body>
 
 </html>
