--- a/index.html
+++ b/index.html
@@ -3,62 +3,368 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width">
 	<title>sarajevo</title>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/style.css">
-	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
+	<link rel="stylesheet" href="css/style.css">
+	<link href=" https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<div class="block-1">
-		<div class="container">
-			<header class="header">
-				<div class="header__content">
+
+	<!--============================= block-1 =============================-->
+	<div class="block-1" id="home">
+		<header class="header">
+			<div class="container">
+				<div class="header__body">
 					<div class="header__logo">
-						<div class="header__logo-title">sarajevo<span>.</span></div>
+						<div class="header__logo-title"><a href="#">sarajevo<span>.</span></a>
+						</div>
 						<div class="header__logo-subtitle">I’am your tag line</div>
 					</div>
-					<nav class="header__nav">
+					<div class="header-byrger"><span></span></div>
+					<nav class="heder__menu">
 						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">Features</a></li>
-							<li><a href="#">Works</a></li>
-							<li><a href="#">Team</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="#home">Home</a></li>
+							<li><a href="#features">Features</a></li>
+							<li><a href="#works">Works</a></li>
+							<li><a href="#team">Team</a></li>
+							<li><a href="#discuss">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
-			</header>
-			<div class="block-1__content">
+			</div>
+		</header>
+		<div class="block-1__content">
+			<div class="wrap_block-1__title">
 				<div class="block-1__title">
-					<h1>sarajevo.</h1>
+					<h1>sarajevo<span>.</span></h1>
 				</div>
 				<div class="block-1__subtitle"><span>/creative</span> one page template.</div>
-				<div class="block-1__text">
-					<p>We are a team of professionals</p>
+				<div class="block-1__text"><img src="/img/Shape.svg" alt="">
+					<p>We are a team of professionals</p><img src="/img/Shape.svg" alt="">
 				</div>
 				<div class="block-1__social">
-					<div class="block-1__icon"><img src="/img/twitter.svg" alt=""></div>
-					<div class="block-1__icon"><img src="/img/facebook.svg" alt=""></div>
-					<div class="block-1__icon"><img src="/img/google+.svg" alt=""></div>
-					<div class="block-1__icon"><img src="/img/dribbble.svg" alt=""></div>
+					<div class="block-1__icon"><a href="#"><img src="/img/dribbble.svg" alt=""></a></div>
+					<div class="block-1__icon"><a href="#"><img src="/img/twitter.svg" alt=""></a></div>
+					<div class="block-1__icon"><a href="#"><img src="/img/facebook.svg" alt=""></a></div>
+					<div class="block-1__icon"><a href="#"><img src="/img/google.svg" alt=""></a></div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script src="/js/icon.js"></script>
-	<!-- ===================================== -->
-	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-		crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-		crossorigin="anonymous"></script> -->
+
+	<!--============================= features =============================-->
+	<div class="features" id="features">
+		<div class="wrap_featyres-header">
+			<div class="featyres-header container">
+				<div class="title">
+					<div class="title__title">Features</div>
+					<div class="title__border"><img src="/img/title-line.svg" alt=""></div>
+				</div>
+				<div class="features-header__content">
+					<div class="features-header-item">
+						<div class="features-header-item__img"><img src="/img/Consulting.svg" alt=""></div>
+						<div class="features-header-item__text">
+							<div class="features-header-item__title">Consulting</div>
+							<div class="features-header-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+								inventore
+							</div>
+						</div>
+					</div>
+					<div class="features-header-item">
+						<div class="features-header-item__img"><img src="/img/branding.svg" alt=""></div>
+						<div class="features-header-item__text">
+							<div class="features-header-item__title">Branding</div>
+							<div class="features-header-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+								inventore
+							</div>
+						</div>
+					</div>
+					<div class="features-header-item">
+						<div class="features-header-item__img"><img src="/img/Development.svg" alt=""></div>
+						<div class="features-header-item__text">
+							<div class="features-header-item__title">Development</div>
+							<div class="features-header-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+								inventore
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="features-body container">
+			<div class="features-body__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+				doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.
+			</div>
+			<div class="features-body__content">
+				<div class="features-body__section">
+					<div class="features-body-item">
+						<div class="features-body-item__img"><img src="/img/tools.svg" alt=""></div>
+						<div class="features--item__text">
+							<div class="features-body-item__title">Accusan timar</div>
+							<div class="features-body-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem
+								accusantium doloremque laudantium.
+							</div>
+						</div>
+					</div>
+					<div class="features-body-item">
+						<div class="features-body-item__img"><img src="/img/Accusan timar.svg" alt=""></div>
+						<div class="features--item__text">
+							<div class="features-body-item__title">Accusan timar</div>
+							<div class="features-body-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem
+								accusantium doloremque laudantium.
+							</div>
+						</div>
+					</div>
+					<div class="features-body-item">
+						<div class="features-body-item__img"><img src="/img/music.svg" alt=""></div>
+						<div class="features--item__text">
+							<div class="features-body-item__title">Accusan timar</div>
+							<div class="features-body-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem
+								accusantium doloremque laudantium.
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="features-body__section-img"><img src="/img/iphon.png" alt=""></div>
+				<div class="features-body__section">
+					<div class="features-body-item">
+						<div class="features-body-item__img"><img src="/img/camera.svg" alt=""></div>
+						<div class="features--item__text">
+							<div class="features-body-item__title">Accusan timar</div>
+							<div class="features-body-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem
+								accusantium doloremque laudantium.
+							</div>
+						</div>
+					</div>
+					<div class="features-body-item">
+						<div class="features-body-item__img"><img src="/img/login.svg" alt=""></div>
+						<div class="features--item__text">
+							<div class="features-body-item__title">Accusan timar</div>
+							<div class="features-body-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem
+								accusantium doloremque laudantium.
+							</div>
+						</div>
+					</div>
+					<div class="features-body-item">
+						<div class="features-body-item__img"><img src="/img/telegram.svg" alt=""></div>
+						<div class="features--item__text">
+							<div class="features-body-item__title">Accusan timar</div>
+							<div class="features-body-item__subtitle">Sed ut perspiciatis unde omnis iste natus error sit
+								voluptatem
+								accusantium doloremque laudantium.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--========================= wrck =========================-->
+	<div class="works" id="works">
+		<div class="works__heder container">
+			<div class="title">
+				<div class="title__title">Works</div>
+				<div class="title__border"><img src="/img/title-line.svg" alt=""></div>
+			</div>
+			<div class="works__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+				laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</div>
+			<div class="works__nav">
+				<ul>
+					<li>
+						<input type="checkbox" name="" id="All">
+						<label for="All">All</label>
+					</li>
+					<li>
+						<input type="checkbox" name="" id="Branding">
+						<label for="Branding">Branding</label>
+					</li>
+					<li>
+						<input type="checkbox" name="" id="Web">
+						<label for="Web">Web</label>
+					</li>
+					<li>
+						<input type="checkbox" name="" id="Logo Design">
+						<label for="Logo Design">Logo Design</label>
+					</li>
+					<li>
+						<input type="checkbox" name="" id="Photography">
+						<label for="Photography">Photography</label>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="works__body">
+			<div class="works__slider slider">
+				<div class="slider__item"><img src=" /img/slid1.png" alt=""></div>
+				<div class="slider__item"><img src=" /img/slid2.png" alt=""></div>
+				<div class="slider__item"><img src=" /img/slid4.png" alt=""></div>
+				<div class="slider__item"><img src=" /img/slid5.png" alt=""></div>
+				<div class="slider__item"><img src=" /img/slid4.png" alt=""></div>
+				<div class="slider__item"><img src=" /img/slid5.png" alt=""></div>
+			</div>
+		</div>
+	</div>
+
+	<!--========================= team =========================-->
+	<div class="team container" id="team">
+		<div class="team__header">
+			<div class="title">
+				<div class="title__title">Meet Our Team</div>
+				<div class="title__border"><img src="/img/title-line.svg" alt=""></div>
+			</div>
+			<div class="team__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+				doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</div>
+		</div>
+		<div class="team__content">
+			<div class="team__items">
+				<div class="team__img"><img src="/img/team1.png" alt=""></div>
+				<div class="team__title">John Filmr Doe</div>
+				<div class="team__subtitle">Managing Director</div>
+			</div>
+			<div class="team__items">
+				<div class="team__img"><img src="/img/team2.png" alt=""></div>
+				<div class="team__title">Chystine Hineu</div>
+				<div class="team__subtitle">Lead Designer</div>
+			</div>
+			<div class="team__items">
+				<div class="team__img"><img src="/img/team3.png" alt=""></div>
+				<div class="team__title">Martin Matrone</div>
+				<div class="team__subtitle">Lead Developer</div>
+			</div>
+			<div class="team__items">
+				<div class="team__img"><img src="/img/team4.png" alt=""></div>
+				<div class="team__title">Steve Flaulkin</div>
+				<div class="team__subtitle">Lead Developer</div>
+			</div>
+		</div>
+	</div>
+
+	<!--============== fact ==============-->
+	<div class="fact" id="fact">
+		<div class="fact__title container">
+			<div class="title">
+				<div class="title__title">Some Fun Facts</div>
+				<div class="title__border"><img src="/img/title-line.svg" alt=""></div>
+			</div>
+			<div class="fact__content container">
+				<div class="fact__item">
+					<div class="fact__img"><img src="/img/fact1.svg" alt=""></div>
+					<div class="fact__text">
+						<div class="fact__title">3200</div>
+						<div class="fact__subtitle">Hours of Work</div>
+					</div>
+				</div>
+				<div class="fact__item">
+					<div class="fact__img"><img src="/img/fact2.svg" alt=""></div>
+					<div class="fact__text">
+						<div class="fact__title">120</div>
+						<div class="fact__subtitle">Satisfied Clinets</div>
+					</div>
+				</div>
+				<div class="fact__item">
+					<div class="fact__img"><img src="/img/fact3.svg" alt=""></div>
+					<div class="fact__text">
+						<div class="fact__title">360</div>
+						<div class="fact__subtitle">Projects delivered</div>
+					</div>
+				</div>
+				<div class="fact__item">
+					<div class="fact__img"><img src="/img/fact4.svg" alt=""></div>
+					<div class="fact__text">
+						<div class="fact__title">42</div>
+						<div class="fact__subtitle">Awards Won</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--=================== discuss ===================-->
+	<div class="discuss container" id="discuss">
+		<div class="discuss__title">
+			<div class="title">
+				<div class="title__title">Let’s Discuss</div>
+				<div class="title__border"><img src="/img/title-line.svg" alt=""></div>
+			</div>
+		</div>
+		<div class="discuss__text">Voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+			illo inventore</div>
+		<div class="discuss__content">
+			<div class="discuss__section-aside">
+				<div class="discuss__aside-desc">Cras at ultrices erat, sed vulputate!</div>
+				<div class="discuss__aside-item">2345 Setwant natrer, 1234,</div>
+				<div class="discuss__aside-item">Washington. United States.</div>
+				<div class="discuss__aside-item">(401) 1234 567</div>
+				<div class="discuss__aside-item">hello@brandi.com</div>
+				<div class="discuss__aside-item">ww.brandi.com</div>
+			</div>
+			<div class="discuss__section-form">
+				<!--  -->
+				<div class="discuss__form-title">Say hello!</div>
+				<form action="">
+					<div class="discuss__form-input">
+						<div class="discuss__form-item"><input type="text" placeholder="Name"></div>
+						<div class="discuss__form-item"><input type="text" placeholder="Email"></div>
+						<div class="discuss__form-item"><input type="text" placeholder="Message"></div>
+					</div>
+					<div class="discuss__form-btn"><input type="button" value="Send message"></div>
+				</form>
+				<!--  -->
+			</div>
+		</div>
+	</div>
+
+	<!--================== map ==================-->
+	<div class="map">
+		<iframe
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12415.896094890499!2d-77.38096306938189!3d38.92457121664204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b6487ddc3ebcf9%3A0xd8e5f13d73fffc8a!2z0JzQvtC90LjRgSDQmtC-0YDQvdC10YAsINCl0LDQvdGC0LXRgCDQnNC40LvQuywg0JLQuNGA0LTQttC40L3QuNGPIDIwMTcxLCDQodCo0JA!5e0!3m2!1sru!2sru!4v1590482461227!5m2!1sru!2sru"
+			width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+			tabindex="0"></iframe>
+	</div>
+
+	<!--=================== footer ===================-->
+	<footer class="footer">
+		<div class="footer__content container">
+			<div class="footer__section-logo">
+				<div class="footer__logo">sarajevo<span>.</span></div>
+				<div class="footer__logo-text">eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+					veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.</div>
+			</div>
+			<div class="footer__section-sub">
+				<div class="footer__sub-title">Subscribe</div>
+				<div class="footer__sub-text">eusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+			</div>
+			<div class="footer__section-exp">
+				<div class="footer__exp-title">Explore</div>
+				<div class="footer__exp-item">
+					<a href="#">Envato</a>
+					<a href="#">Freebiescurve</a>
+					<a href="#">Kreative</a>
+					<a href="#">Themecurve</a>
+					<a href="#">Themeforest</a>
+					<a href="#">Google</a>
+					<a href="#">Yahoo</a>
+					<a href="#">Microsoft</a>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<!-- js -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="/js/slick.min.js"></script>
+	<script src="/js/script.js"></script>
 </body>
 
 </html>
